@@ -3,8 +3,11 @@ package io.engine;
 import static org.junit.Assert.*;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.OutputStream;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
 
@@ -15,15 +18,25 @@ import org.junit.BeforeClass;
 import org.junit.Test;
 
 public class EngineIOIntegration extends EngineIO {
-	private static final String OPEN = "open";
-	private static final String CLOSE = "close";
-	private static final String ERROR = "error";
-	private static final String DATA = "data";
-	
+	private static final String OPEN = "OPEN";
+	private static final String CLOSE = "CLOSE";
+	private static final String ERROR = "ERROR";
+	private static final String DATA = "DATA";
+
 	private final static String NODE = "node";
 	private Process node;
 	private BufferedReader stdout;
 	private LinkedBlockingQueue<String> events = new LinkedBlockingQueue<String>();
+	private final Thread SHUTDOWN_HOOK = new Thread() {
+		@Override
+		public void run() {
+			try {
+				node.destroy();
+			} catch (Exception e) {
+				e.printStackTrace();
+			}
+		}
+	};
 
 	private String pollEvent() {
 		try {
@@ -32,28 +45,39 @@ public class EngineIOIntegration extends EngineIO {
 			return null;
 		}
 	}
-	
+
 	@Before
 	public void setUp() throws Exception {
 		port((int) (Math.random() * 32000) + 1200);
-		node = Runtime.getRuntime().exec(
-				new String[] { NODE, "./test/io/engine/engine.js",
-						"" + getPort() });
-		node.getErrorStream().close();
+		ProcessBuilder pBuilder = new ProcessBuilder(NODE,
+				"./test/io/engine/engine.js", "" + getPort(),
+				"polling,websocket");
+		node = pBuilder.start();
 		stdout = new BufferedReader(
 				new InputStreamReader(node.getInputStream()));
-		
-		Runtime.getRuntime().addShutdownHook(new Thread() {
-			@Override
+
+		new Thread() {
 			public void run() {
+				BufferedReader err = new BufferedReader(new InputStreamReader(node.getErrorStream()));
 				try {
-					node.destroy();
+					String l;
+					while ((l = err.readLine()) != null) {
+						System.err.println(l);
+					}
 				} catch (Exception e) {
 					e.printStackTrace();
 				}
-			}
-		});
-		assertEquals("Server is ready", "OK", stdout.readLine());
+			};
+		}.start();
+		Runtime.getRuntime().addShutdownHook(SHUTDOWN_HOOK);
+		assertEquals("Server is ready", "OK", pollServer());
+		Thread.sleep(1000);
+	}
+
+	private String pollServer() throws IOException {
+		String line = stdout.readLine();
+		System.err.println("Getting: " + line);
+		return line;
 	}
 
 	@After
@@ -65,7 +89,10 @@ public class EngineIOIntegration extends EngineIO {
 	public void testOpen() throws IOException {
 		open();
 		assertEquals("onOpen() should be called", OPEN, pollEvent());
-		assertEquals("server should get a new connection", OPEN, stdout.readLine());
+		assertEquals("server should get a new connection", OPEN,
+				pollServer());
+		close();
+		assertEquals("onClose() should be called", CLOSE, pollEvent());
 	}
 
 	@Override
@@ -87,6 +114,5 @@ public class EngineIOIntegration extends EngineIO {
 	public void onError(EngineIOException exception) {
 		events.offer(ERROR);
 	}
-
 
 }
